Criado services para requisiçoes e paginação
